--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1436.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "pg": "^8.11.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
